--- a/feedme/views/layout.hbs
+++ b/feedme/views/layout.hbs
@@ -32,7 +32,7 @@
           <a class="nav-link" href="/auth/signup">signup</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Food list</a>
+          <a class="nav-link" href="/foods">Food list</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
