--- a/feedme/views/foods/food-create.hbs
+++ b/feedme/views/foods/food-create.hbs
@@ -22,8 +22,8 @@
                     <input type="text" class="form-control" id="imageUrl" name="imageUrl">
                 </div>
                 <div class="mb-3">
-                    <label for="expirationDate" class="form-label">Expiration date</label>
-                    <input type="text" class="form-control" id="expirationDate" name="expirationDate">
+                    <label for="expireDate" class="form-label">Expiration date</label>
+                    <input type="text" class="form-control" id="expireDate" name="expireDate">
                 </div>
                 <div class="mb-3">
                     <label for="quantity" class="form-label">Amount</label>
@@ -35,7 +35,7 @@
                 </div>
 
 
-                <button type="submit" class="btn btn-dark">Create new room</button>
+                <button type="submit" class="btn btn-dark">Create new item</button>
                 <a href="/food-list" class="btn btn-dark">Go back</a>
             </form>
             <hr>
