--- a/feedme/views/foods/foods.hbs
+++ b/feedme/views/foods/foods.hbs
@@ -6,5 +6,9 @@
     <p>Category: {{this.category}}</p>
     <a href="/foods/{{this._id}}/edit" class="btn btn-primary">Edit</a>
     {{/each}}
+    <a href="/foods/{{this._id}}/edit" class="btn btn-primary">Edit</a>
+    <form action="/foods/{{this._id}}/delete" method="post">
+      <button class="btn btn-danger" type="submit">Delete Item</button>
+    </form>
 </div>
 <a href="/foods/food-create" class="btn btn-dark">Create Food</a>
