CRUD for food list finished and reviewed

--- a/feedme/views/foods/food-edit.hbs
+++ b/feedme/views/foods/food-edit.hbs
@@ -5,7 +5,7 @@
 
       <hr>
 
-      <form action="foods/{{_id}}/edit" method="POST">
+      <form action="/foods/{{_id}}/edit" method="POST">
 
         <div class="mb-3">
           <label for="name" class="form-label">Name</label>
