home, views, home post

--- a/feedme/views/index.hbs
+++ b/feedme/views/index.hbs
@@ -1,2 +1,14 @@
-<h1>{{appTitle}} 🚀</h1>
-<p>Welcome Ironhacker!</p>
+<div class="icon-app">
+  <img src="" alt="app icon">
+</div>
+<div class="welcome">
+  <h2>Welcome to feed me!</h2>
+  <form action="/" method="post">
+    <div class="mb-3">
+      <label for="name" class="form-label">Name</label>
+      <input type="text" class="form-control" id="name" name="name">
+    </div>
+    <button type="submit" class="btn btn-dark">Get Started</button>
+  </form>
+  <a href="/auth/login">Already a feeder?</a>
+</div>
