user-profile view, console message when you are running out of food
Co-authored-by: cristinahcm <cristinahcm@users.noreply.github.com>

--- a/feedme/views/index.hbs
+++ b/feedme/views/index.hbs
@@ -5,7 +5,7 @@
   <h2>Welcome to feed me!</h2>
   <form action="/" method="post">
     <div class="mb-3">
-      <label for="name" class="form-label">Name</label>
+      <label for="name" class="form-label"> Whats your name?</label>
       <input type="text" class="form-control" id="name" name="name">
     </div>
     <button type="submit" class="btn btn-dark">Get Started</button>
