alarm if running out of food and shoplist

--- a/feedme/views/foods/foods.hbs
+++ b/feedme/views/foods/foods.hbs
@@ -9,5 +9,10 @@
       <button class="btn btn-danger" type="submit">Delete Item</button>
     </form>
     {{/each}}
+
+    <h5>TOTAL:</h5><span class="total">{{total}}</span> 
+  
 </div>
+
+<div></div>
 <a href="/foods/food-create" class="btn btn-dark">Create Food</a>
