--- a/feedme/views/user/userprofile.hbs
+++ b/feedme/views/user/userprofile.hbs
@@ -2,7 +2,7 @@
 
 <div>
   <a href="/foods" class="btn btn-dark">Check whats on your fridge</a>
-  <a href="/foods" class="btn btn-dark">Shopping list</a>
+  <a href="/foods/food-shopList" class="btn btn-dark">Shopping list</a>
 </div>
 
 <div>
