log in and user views changed

--- a/feedme/views/foods/food-create.hbs
+++ b/feedme/views/foods/food-create.hbs
@@ -42,7 +42,7 @@
           <input type="text" class="form-control" id="note" name="note">
         </div>
         <button type="submit" class="btn btn-dark">Create new item</button>
-        <a href="/food-list" class="btn btn-dark">Go back</a>
+        <a href="/foods" class="btn btn-dark">Go back</a>
       </form>
       <hr>
     </div>
