--- a/feedme/views/foods/food-edit.hbs
+++ b/feedme/views/foods/food-edit.hbs
@@ -47,7 +47,7 @@
 
 
         <button type="submit" class="btn btn-dark">Update Item</button>
-        <a href="/food-list" class="btn btn-dark">Go back</a>
+        <a href="/foods" class="btn btn-dark">Go back</a>
       </form>
       <hr>
     </div>
