--- a/feedme/views/user/userprofile.hbs
+++ b/feedme/views/user/userprofile.hbs
@@ -7,5 +7,5 @@
 
 <div>
   <h1>Dont know what to eat?</h1>
-  <a href="/foods" class="btn btn-dark">Check some recepies</a>
+  <a href="/foods/recipes" class="btn btn-dark">Check some recepies</a>
 </div>
