shop-list finished styles missing

--- a/feedme/views/foods/food-shoplist.hbs
+++ b/feedme/views/foods/food-shoplist.hbs
@@ -4,6 +4,7 @@
     <input type="text" name="itemText" autocomplete="off" placeholder="New Item" class="roundBorder">
     <button type="submit" class="addItemButton">+</button>
   </form>
+  <ul class="itemContainer"></ul>
 </div>
 <div class="shopList">
   <h3>Here some suggestions you are running out of</h3>
