class done to the shoplist

--- a/feedme/views/foods/food-shoplist.hbs
+++ b/feedme/views/foods/food-shoplist.hbs
@@ -1,7 +1,7 @@
 <div class="shopList">
   <h1>Create List</h1>
   <form onsubmit="addNewItem(event)">
-    <input type="text" name="itemText" autocomplete="off" placeholder="New Item" class="roundBorder">
+    <input class="input" type="text" name="itemText" autocomplete="off" placeholder="New Item" class="roundBorder">
     <button type="submit" class="addItemButton">+</button>
   </form>
   <ul class="itemContainer"></ul>
