--- a/feedme/public/stylesheets/style.css
+++ b/feedme/public/stylesheets/style.css
@@ -10,3 +10,33 @@ h1 {
   color: 15px;
 }
 
+.form{
+  margin: 20px 0;
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: auto 35px auto;
+  grid-column-gap: 15px;
+}
+
+.input{
+padding-left: 10px;
+}
+
+
+.item{
+  background-color: green;
+  padding: 15px;
+  margin-top: 15px;
+  color: lightblue;
+  cursor: pointer;
+  width: 100px;
+  border: 100px;
+  border-radius:10%;
+}
+
+.done{
+  background-color: grey;
+  text-decoration: line-through;
+  color: black;
+}
+
