displayed alert message reviewed

--- a/feedme/views/foods/foods.hbs
+++ b/feedme/views/foods/foods.hbs
@@ -10,7 +10,10 @@
     </form>
     {{/each}}
 
+    <div class="message">Running out of food, go to the store</div>
+
     <h5>TOTAL:</h5><span class="total">{{total}}</span> 
+    <h5>TOTAL ITEMS:</h5><span class="items-amount">{{totalItems}}</span>
   
 </div>
 
