--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,7 +23,7 @@ padding-left: 10px;
 }
 
 
-.item{
+.shoplist-items{
   background-color: green;
   padding: 15px;
   margin-top: 15px;
@@ -46,6 +46,10 @@ padding-left: 10px;
 }
 
 .message{
+  display: none;
+}
+
+.hidden{
   display: none;
 }
 
