--- a/views/foods/food-create.hbs
+++ b/views/foods/food-create.hbs
@@ -41,6 +41,10 @@
           <label for="note" class="form-label">Add some comment</label>
           <input type="text" class="form-control" id="note" name="note">
         </div>
+          <div class="mb-3">
+          <label for="cost" class="form-label">cost</label>
+          <input type="number" class="form-control" id="cost" name="cost">
+        </div>
         <button type="submit" class="btn btn-dark">Create new item</button>
         <a href="/foods" class="btn btn-dark">Go back</a>
       </form>
