--- a/views/foods/food-edit.hbs
+++ b/views/foods/food-edit.hbs
@@ -44,6 +44,10 @@
           <input type="text" class="form-control" id="note" name="note"
             value="{{note}}">
         </div>
+            <div class="mb-3">
+          <label for="cost" class="form-label">cost</label>
+          <input type="number" class="form-control" id="cost" name="cost">
+        </div>
 
 
         <button type="submit" class="btn btn-dark">Update Item</button>
