--- a/views/user/userprofile.hbs
+++ b/views/user/userprofile.hbs
@@ -1,3 +1,4 @@
+  {{> navbar}}
 <h1>This is user profile</h1>
 
 <div>
@@ -8,4 +9,9 @@
 <div>
   <h1>Dont know what to eat?</h1>
   <a href="/foods/recipes" class="btn btn-dark">Check some recepies</a>
+</div>
+
+<div> 
+<h1>Check Your info</h1>
+ <h5>$ Spent in food:</h5><span class="cost">{{moneySpend}}</span> 
 </div>
