--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,6 +18,48 @@
   </head>
 
   <body>
+<nav  class="navbar bg-light fixed-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">
+    <img src="/images/navbar-logo.svg" alt="Logo" class="logo"/>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/foods">My food</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/shoplist/food-shoplist">Shopping List</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/foods/food-recipes">Recipes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/">Log out</a>
+          </li>
+        
+            <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+          
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</nav>
 
     {{{body}}}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
