--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-
+<div class="p" ><img src="/images/navbar-logo.svg" alt="img"></div>
   
   <form class="welcome-form" action="/" method="post">
   <div class="welcome-title">
