--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,25 @@
   background-color:white;
 }
 
+.p {
+  width: 100px;
+  animation-duration: 3s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%
+  }
+
+  to {
+    margin-top: 10%;
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+
 .logo {
   height:30px
 }
@@ -230,6 +249,7 @@ padding-left: 10px;
 
 .food-list{
   margin: 5%;
+  margin-left: 5;
   display: flex;
   justify-content: space-around;
 }
@@ -237,4 +257,21 @@ padding-left: 10px;
 .food-create{
   margin-left: 43%;
   border-radius: 20%;
+}
+
+.foodType-list{
+  display: flex;
+}
+.foodType-list li>a {
+  color: black;
+}
+
+.delete-button{
+  margin-left: 10;
+  display: block;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  border: 1px solid #707070;
+  background-color: white;
 }
