--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
     </div>
     <div class="welcome-name">
       <input type="text" class="text-name" id="name" name="name">
-      <button class="round-button" type="submit">></button>
+      <a href="/auth/signup"> <img src="/images/Recurso 2.svg" class="arrow" alt="arrow continue"> </a>
     </div>
     <a href="/auth/login" class="signup-login">Already a feeder?</a>
 </form>
