--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,6 +49,7 @@
   display:flex;
   flex-direction: row;
   padding-bottom: 20px;
+  align-items: center;
 }
 
 .text-name {
@@ -60,13 +61,9 @@
   border: 1px solid #707070;
 }
 
-.round-button{
-    display: block;
-    height: 35px;
-    width: 35px;
-    border-radius: 50%;
-    border: 1px solid #707070;
-    background-color: white;
+.arrow {
+  height:30px;
+  padding-left:10px;
 }
 
 
@@ -85,37 +82,24 @@ padding-left: 10px;
 
 
 .shoplist-items{
-  background-color: green;
   padding: 15px;
   margin-top: 15px;
-  color: lightblue;
-  cursor: pointer;
-  width: 100px;
-  border: 100px;
-  border-radius:10%;
+  color:black;
 }
 
 
 .done{
-  background-color: grey;
   text-decoration: line-through;
   color: black;
 }
 
-.alert{
-  background-color:red;
-
-}
-
-.message{
-  display: none;
-}
 
 .container-fluid {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
+
 .hidden{
   display: none;
 }
@@ -262,6 +246,7 @@ padding-left: 10px;
 .foodType-list{
   display: flex;
 }
+
 .foodType-list li>a {
   color: black;
 }
@@ -271,6 +256,142 @@ padding-left: 10px;
   display: block;
   height: 20px;
   width: 20px;
+  border-radius: 50%;
+  border: 1px solid #707070;
+  background-color: white;
+}
+
+.shopping-list{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top:100px;
+}
+
+h3 {
+  font-size:20px;
+}
+
+a.food-create.btn.btn-dark {
+  background-color:black;
+  padding-right: 30px;
+  padding-left: 30px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  border-radius: 8px;
+  color:white;
+  font-size: 15px;
+  border-style: none;
+}
+
+.form-control {
+  padding-right: 100px;
+  padding-left: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 8px;
+  border: 1px solid #707070;
+}
+
+.formcontrol {
+  padding-bottom: 10px;
+}
+
+.expire-date {
+  padding-right: 50px;
+  padding-left: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border:none;
+}
+
+.quantity-food {
+  padding-right: 50px;
+  padding-left: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border:none;
+}
+
+.price-food {
+  padding-right: 50px;
+  padding-left: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border:none;
+}
+
+
+.alert-message{
+  border: 1px solid #707070;
+  width:20%;
+  border-radius: 10%;
+  padding: 5px 5px;
+  margin-left: 60px;
+background-color: red;
+}
+
+.form-select {
+  padding-right: 100px;
+  padding-left: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 8px;
+  border: 1px solid #707070;
+  color: #757779;
+}
+
+.container-create-food {
+  margin-top: 100px;
+}
+
+.title-h2 {
+  font-size:22px;
+  text-align: center;
+  padding-bottom: 15px;
+}
+
+.create-buttons {
+  padding-top: 20px;
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.create-button {
+  background-color:black;
+  padding-right: 30px;
+  padding-left: 30px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  border-radius: 8px;
+  color:white;
+  font-size: 15px;
+  border-style: none;
+}
+
+ .add-item {
+  margin-top: 100px;
+} 
+
+.item-shop {
+  justify-content: center;
+}
+
+.item-name {
+  text-align: center;
+}
+
+
+.shopform{
+  display: flex;
+   justify-content: center;
+}
+
+.add-button {
+  margin-left: 10;
+  display: block;
+  height: 32px;
+  width: 3px;
   border-radius: 50%;
   border: 1px solid #707070;
   background-color: white;
