--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -42,6 +42,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/foods/food-recipes">Recipes</a>
           </li>
+           <li class="nav-item">
+            <a class="nav-link" href="/user/userprofile">Userprofile</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="/">Log out</a>
           </li>
