--- a/views/shoplist/food-shoplist.hbs
+++ b/views/shoplist/food-shoplist.hbs
@@ -1,10 +1,11 @@
   {{> navbar}}
-<h1>Create Shopping List</h1>
-<form action="/shoplist/food-shoplist" method="POST">
-  <div class="mb-3">
-          <label for="name" class="form-label">Item Name</label>
-          <input type="text" class="form-control" id="name" name="name">
-        </div>
+  <div class="add-item">
+    <div class="row justify-content-center">
+      <form action="/shoplist/food-shoplist" method="POST">
+     <div class="shopform">
+      <div class="item">
+          <input type="text" class="form-control" placeholder="New item" id="name" name="name">
+      </div>
          <div class="hidden">
           <label for="category">Choose a category:</label>
           <select name="category" id="category" multiple>
@@ -35,20 +36,24 @@
           <label  for="note" class="form-label">Add some comment</label>
           <input type="text" class="form-control" id="note" name="note">
         </div> 
-         <button type="submit" class="btn btn-dark">Add new item</button>
-</form>
+          <button type="submit" class="add-button">+</button>
+       </div>
+      </form>
+</div>
+</div>
 
-
-        <h1>Lista</h1>
- <ul class="list"> 
-{{#each shopList}}
-<li class="shoplist-items">{{this.name}}</li>
-  <form action="/shoplist/{{this._id}}/delete" method="post">
+<div class="shopping-list">
+        <h3>Shopping List</h3>
+    <ul class="list"> 
+    {{#each shopList}}
+    <li class="shoplist-items">{{this.name}}</li>
+      <form action="/shoplist/{{this._id}}/delete" method="post">
       <button class="btn btn-danger" type="submit">Delete Item</button>
     </form>
 {{/each }}
 </ul>
 
+ <div class="suggestions">  
  <h3>Here some suggestions you are running out of</h3>
 <ul>
 {{#each shopListSugestion}}
@@ -57,5 +62,6 @@
 </ul>
 </div>
 
+</div>
 
 
