--- a/views/user/userprofile.hbs
+++ b/views/user/userprofile.hbs
@@ -7,11 +7,19 @@
 </div>
 
 <div>
-  <h1>Dont know what to eat?</h1>
+  <h3>Dont know what to eat?</h3>
   <a href="/foods/recipes" class="btn btn-dark">Check some recepies</a>
 </div>
 
 <div> 
-<h1>Check Your info</h1>
- <h5>$ Spent in food:</h5><span class="cost">{{moneySpend}}</span> 
+<h3>Check Your info</h3>
+  <h5>TOTAL:</h5><span class="total">{{total}}</span> 
+    <h5>TOTAL ITEMS:</h5><span class="items-amount">{{totalItems}}</span>
+ <h5>$ Spent in food:</h5><span class="cost">${{moneySpend}}</span> 
+</div>
+
+
+<div class="hidden alert-message">
+  <h3>You`re running out of food</h3><br>
+  <h3>Go to the Store!</h3>
 </div>
