--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -322,12 +322,12 @@ a.food-create.btn.btn-dark {
 
 
 .alert-message{
-  border: 1px solid #707070;
+  padding:8px;
+border: 1px solid #707070;
   width:20%;
-  border-radius: 10%;
-  padding: 5px 5px;
-  margin-left: 60px;
-background-color: red;
+  border-radius: 8px;
+  text-align: center;
+  border-color:red;
 }
 
 .form-select {
@@ -390,9 +390,81 @@ background-color: red;
 .add-button {
   margin-left: 10;
   display: block;
-  height: 32px;
-  width: 3px;
+  height: 35px;
+  width: 35px;
   border-radius: 50%;
   border: 1px solid #707070;
   background-color: white;
+}
+
+.icon-profile {
+  height:100px;
+  width:100px;
+}
+
+.itemsShop{
+  display: flex;
+
+}
+
+.pages-profile {
+  margin-top: 100px;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+}
+
+.title-profile {
+  padding-top:20px;
+}
+
+.a {
+  color: black;
+}
+
+.pages {
+  display:flex;
+  justify-content:space-around;
+}
+
+.info {
+margin-top: 20px;
+display:flex;
+flex-direction:row;
+justify-content: space-around;
+align-items: center;
+}
+
+.hidden alert-message {
+  display:flex;
+}
+
+
+.card-img-top{
+  width: 80%;
+}
+.card{
+  margin-left: 40%;
+
+}
+
+h6 {
+  font-weight: 300;
+}
+
+.my-information {
+  margin-top: 50px;
+  display: flex;
+  flex-direction:column;
+}
+
+.details{
+  margin-top:8%;
+  display:flex;
+  justify-content: center;
+}
+
+.h3-info {
+  display:flex;
+  justify-content: center;
 }
