--- a/views/foods/food-details.hbs
+++ b/views/foods/food-details.hbs
@@ -12,8 +12,8 @@
     <li class="list-group-item">Quantity: {{quantity}}</li>
   </ul>
   <div class="card-body">
-    <a href="/foods/foods" class="btn btn-dark">Go Back</a>
-    <a href="/shoplist/food-shoplist" class="btn btn-dark">Go Shopping</a>
+    <a href="/foods" class="btn btn-dark">Go Back</a>
+    <a href="/foods/{{this._id}}/edit" class="btn btn-dark">Edit</a>
   </div>
 </div>
 </div>
