--- a/views/user/userprofile.hbs
+++ b/views/user/userprofile.hbs
@@ -45,4 +45,12 @@
           <h6>Go to the Store!</h6>
       </div>
     </div>
+
 </div>
+
+{{!-- <div>
+  <canvas id="myChart"> </canvas>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script> --}}
+
